--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
-
-spring.neo4j.uri=${NEO_URL:bolt://localhost:7687}
-spring.neo4j.authentication.username=${NEO_USER:neo4j}
-spring.neo4j.authentication.password=${NEO_PASSWORD:rootroot}
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mainLeague
 
 logging.level.org.springframework.data.neo4j=DEBUG
