terminado, falta testear!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mainLeague
-
+spring.data.mongodb.auto-index-creation=true
 logging.level.org.springframework.data.neo4j=DEBUG
